syntax = "proto3";

package kalix.demo.domain;

message CounterState {
  int32 value = 1;
}
